--- a/main.css
+++ b/main.css
@@ -1,20 +1,17 @@
+html, body {
+   height: 100%;
+}
+
 .list-area {
-   height: 147px;
    overflow: auto;
 }
 
-.list-area.link, .list-area.tags {
-   height: 300px;
-}
-
 .multi-list {
-   list-style: none;
    margin: 0;
    padding: 0;
 }
 
 .multi-list li {
-   list-style: none outside none;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
@@ -26,6 +23,14 @@
    font-size: 20px;
 }
 
+ul.multi-list {
+   list-style: none;
+}
+
+ul.multi-list li {
+   list-style: none outside none;
+}
+
 .row-fluid.upper [class*="span"] {
    margin: 10px 10px 0px 10px;
 }
@@ -34,20 +39,13 @@
 }
 
 .row-fluid.lower [class*="span"] {
-   margin: 0px 10px 10px 10px;
+   margin: 0px 10px;
 }
 .row-fluid.lower [class*="span"]:first-child {
-   margin: 0px 0px 5px 15px;
+   margin: 0px 0px 0px 15px;
 }
-
-label.checkbox {
-   line-height: 36px;
-   font-size: 20px;
-   margin: 0;
-}
-
-input[type="checkbox"] {
-   margin: 12px;
+span.label-info {
+   padding: 3px 10px;
 }
 
 .list-page {
