--- a/main.css
+++ b/main.css
@@ -2,6 +2,10 @@ html, body {
    height: 100%;
 }
 
+body {
+   background: url('wood.jpeg') top center no-repeat;
+}
+
 .list-area {
    overflow: auto;
 }
@@ -16,11 +20,23 @@ html, body {
    white-space: nowrap;
    overflow: hidden;
    vertical-align: middle;
-   border-top: 1px solid rgb(201, 228, 242);
+   border-bottom: 1px solid rgb(201, 228, 242);
    margin: 0;
    padding: 6px 10px;
    line-height: 36px;
    font-size: 20px;
+}
+
+.multi-list li:first-child {
+   border-top: 1px solid rgb(201, 228, 242);
+}
+
+.multi-list li:hover {
+   background-color: #FFFC17;
+}
+
+.multi-list li.selected {
+   background-color: #FDD017;
 }
 
 ul.multi-list {
@@ -51,7 +67,6 @@ span.label-info {
 .list-page {
    border: 1px solid rgb(170, 170, 170);
    border-radius: 8px;
-   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.05);
    background-color: rgb(255, 253, 219);
 }
 
@@ -65,4 +80,12 @@ span.label-info {
 
 span.pop, span.tag {
    padding: 0 20px 0 0;
+}
+
+.modal-header h3 {
+   text-align: center;
+}
+
+#login_fail_msg {
+   margin-right: 20px;
 }
