--- a/main.css
+++ b/main.css
@@ -96,6 +96,9 @@ span.pop, span.tag {
    border: none;  
    padding: 0;
 }
+.label-list li:first-child {
+   border-top: none;
+}
 .label-list {
    margin: 0;
 }
