--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body {
 .multi-list {
    margin: 0;
    padding: 0;
+   cursor: default;
 }
 
 .multi-list li {
@@ -25,6 +26,17 @@ body {
    padding: 6px 10px;
    line-height: 36px;
    font-size: 20px;
+}
+
+p {
+   vertical-align: middle;
+   border-top: 1px solid rgb(201, 228, 242);
+   border-bottom: 1px solid rgb(201, 228, 242);
+   margin: 0;
+   padding: 6px 10px;
+   line-height: 36px;
+   font-size: 20px;
+   color: #999;
 }
 
 .multi-list li:first-child {
